Fix crash in shell_utils when using simple collator

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: 8.1.0-rc0
    • Component/s: Shell
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2024-11-25
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      BF-35734 surfaced an issue in the mongo (shell) executable.

      The shell's `_compareStringsWithCollation` function creates a collator object from BSON and then calls a method on it.

      However, `CollatorFactoryICU` can also return a nullptr when the BSON object contains

      { locale: "simple" }
      

      In this case the caller must check the returned value for not being a nullptr.

            Assignee:
            Jan Steemann
            Reporter:
            Jan Steemann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: