SERVER-97335 Fix crash in shell_utils when using simple collator (#29344)

GitOrigin-RevId: 81e76ead1870be9e84259bbadbc1784b37f39c8f